--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 35
 
     defaultConfig {
-        applicationId "com.test.app"
+        applicationId "com.elite.qel_medistore"
         minSdkVersion 24
         targetSdkVersion 35
         versionCode 1
