--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "package_name": "com.elite.qel_medistore",
-    "app_name": "Qel",
+    "app_name": "Qeli",
     "version_code": 3,
     "version_name": "3",
     "min_sdk": 24,
