--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,33 @@
 apply plugin: 'com.android.application'
-import groovy.json.JsonSlurper
 
-def configFile = file("${rootProject.projectDir}/config.json")
+import groovy.json.JsonSlurper
+import java.nio.file.Files
+import java.nio.file.Paths
+
+// -------------------------
+// Load config.json
+// -------------------------
+def configFile = file("${projectDir}/../config.json") // top-level
 if (!configFile.exists()) {
     throw new GradleException("config.json not found at project root")
 }
 
 def config = new JsonSlurper().parse(configFile)
+
 def appPackage = config.package_name
 def appName = config.app_name
-def versionCode = config.version_code
+def versionCode = config.version_code as Integer
 def versionName = config.version_name
-def minSdk = config.min_sdk
-def compileSdk = config.compile_sdk
+def minSdk = config.min_sdk as Integer
+def compileSdk = config.compile_sdk as Integer
 def iconUrl = config.app_icon
 def splashUrl = config.splash_screen
 def colorBlack = config.color_black
+def colorAccent = config.color
 
+// -------------------------
+// Android config
+// -------------------------
 android {
     namespace appPackage
     compileSdkVersion compileSdk
@@ -41,10 +52,13 @@ android {
     }
 }
 
+// -------------------------
+// Download App Assets
+// -------------------------
 task downloadAppAssets {
     doLast {
         def drawableDir = file("src/main/res/drawable")
-        drawableDir.mkdirs()
+        if (!drawableDir.exists()) drawableDir.mkdirs()
 
         def iconFile = new File(drawableDir, "app_icon.png")
         println "Downloading app_icon from ${iconUrl}..."
@@ -54,68 +68,94 @@ task downloadAppAssets {
         println "Downloading splash_screen from ${splashUrl}..."
         new URL(splashUrl).withInputStream { i -> splashFile.withOutputStream { it << i } }
 
-        println "✅ App assets downloaded."
+        println "✅ App assets downloaded"
     }
 }
 
-preBuild.dependsOn(downloadAppAssets)
-
+// -------------------------
+// Update strings.xml (app name)
+// -------------------------
 task updateAppName {
     doLast {
         def stringsFile = file("src/main/res/values/strings.xml")
         if (!stringsFile.exists()) {
             stringsFile.parentFile.mkdirs()
-            stringsFile.text = '''<?xml version="1.0" encoding="utf-8"?>
+            stringsFile.text = """<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name"></string>
-</resources>'''
+    <string name="app_name">${appName}</string>
+</resources>"""
+        } else {
+            def text = stringsFile.text
+            if (text =~ /<string name="app_name">.*<\/string>/) {
+                text = text.replaceAll(/<string name="app_name">.*<\/string>/, "<string name=\"app_name\">${appName}</string>")
+            } else {
+                text = text.replace("</resources>", "    <string name=\"app_name\">${appName}</string>\n</resources>")
+            }
+            stringsFile.text = text
         }
-        def content = stringsFile.text
-        content = content.replaceAll(/<string name="app_name">.*?<\/string>/, "<string name=\"app_name\">${appName}</string>")
-        stringsFile.text = content
-        println "✅ Updated app_name in strings.xml"
+        println "✅ app_name updated in strings.xml"
     }
 }
 
-preBuild.dependsOn(updateAppName)
+// -------------------------
+// Update Java/Kotlin package names (file contents only)
+// -------------------------
+task updatePackageName {
+    doLast {
+        def oldPackage = "com.elite.qel_medistore" // set your current package
+        def newPackage = appPackage
+        def srcDir = file("src/main/java")
 
+        srcDir.eachFileRecurse { file ->
+            if (file.name.endsWith(".java") || file.name.endsWith(".kt")) {
+                def text = file.text
+                text = text.replaceAll("package ${oldPackage};", "package ${newPackage};")
+                file.text = text
+            }
+        }
+
+        println "✅ Java/Kotlin package names updated (file contents only)"
+        println "⚠️ Remember to rename folders under src/main/java to match ${newPackage.replace('.', '/')}"
+    }
+}
+
+// -------------------------
+// Update colors.xml
+// -------------------------
 task updateColors {
     doLast {
         def colorsFile = file("src/main/res/values/colors.xml")
         if (!colorsFile.exists()) {
             colorsFile.parentFile.mkdirs()
-            colorsFile.text = '''<?xml version="1.0" encoding="utf-8"?>
+            colorsFile.text = """<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary"></color>
-    <color name="colorPrimaryDark"></color>
-</resources>'''
-        }
-        def content = colorsFile.text
-        content = content.replaceAll(/<color name="colorPrimary">.*?<\/color>/, "<color name=\"colorPrimary\">${colorBlack}</color>")
-        content = content.replaceAll(/<color name="colorPrimaryDark">.*?<\/color>/, "<color name=\"colorPrimaryDark\">${colorBlack}</color>")
-        colorsFile.text = content
-        println "✅ Updated colors in colors.xml"
-    }
-}
-
-preBuild.dependsOn(updateColors)
-
-task updatePackageName {
-    doLast {
-        def srcDir = file("src/main/java")
-        srcDir.eachFileRecurse { f ->
-            if (f.isFile() && f.name.endsWith(".java")) {
-                def text = f.text
-                text = text.replaceAll(/package\s+[\w\.]+;/, "package ${appPackage};")
-                f.text = text
+    <color name="colorPrimary">${colorBlack}</color>
+    <color name="colorAccent">${colorAccent}</color>
+</resources>"""
+        } else {
+            def text = colorsFile.text
+            if (text =~ /<color name="colorPrimary">.*<\/color>/) {
+                text = text.replaceAll(/<color name="colorPrimary">.*<\/color>/, "<color name=\"colorPrimary\">${colorBlack}</color>")
+            } else {
+                text = text.replace("</resources>", "    <color name=\"colorPrimary\">${colorBlack}</color>\n</resources>")
             }
+
+            if (text =~ /<color name="colorAccent">.*<\/color>/) {
+                text = text.replaceAll(/<color name="colorAccent">.*<\/color>/, "<color name=\"colorAccent\">${colorAccent}</color>")
+            } else {
+                text = text.replace("</resources>", "    <color name=\"colorAccent\">${colorAccent}</color>\n</resources>")
+            }
+
+            colorsFile.text = text
         }
-        println "✅ Updated Java package names"
+
+        println "✅ Colors updated in colors.xml"
     }
 }
 
-preBuild.dependsOn(updatePackageName)
-
+// -------------------------
+// Dependencies
+// -------------------------
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.9.0'
@@ -124,3 +164,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+// -------------------------
+// Make preBuild depend on all tasks
+// -------------------------
+preBuild.dependsOn(downloadAppAssets, updateAppName, updatePackageName, updateColors)
