--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "color_black": "#333333",
     "color":"#ffffff",
     "IdNumber":"17ea81ea-b4fa-4b7a-8f3e-10ef438b880f",
-    "Build":"On",
+    "Build":"Off",
     "app_icon":"https://drive.google.com/uc?export=download&id=1eaSvvb13P3WKKRcVPDetR6-7CNmV277-",
     "splash_screen":"https://drive.google.com/uc?export=download&id=1SpDbTFDSAQneVeSZzIlHLHXSjGhXK7hk"
 }
